# vect2rast

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Doxyfile  LICENSE  README.md  discretize.py  gen_boolean.py
docs/: conf.py  cpp_api.rst  index.rst  installation.rst  py_api.rst  theory.rst  tutorial.rst
example/: CMakelists.txt  README.md  example_vect2rast.cpp
include/: CMakeLists.txt
include/vect2rast/: hypersphere.hpp  spheroid.hpp  v2r_ndsphere.h  v2r_ndsphere.hpp  v2r_spheroid.hpp  vect2rast.h  vect2rast.hpp
metadata/: description.txt  repository.txt
python/: setup.cfg  setup.py
python/tests/: test_vect2rast.py
python/vect2rast/: __init__.py  vect2rast.cpp
sandbox/: test_v2r.c  v2r.c
src/: CMakeLists.txt  Makefile  config.cmake.in  meson.build  test_v2r.c  test_v2r_sphere.c  test_vect2rast_sphere.c  test_vect2rast_spheroid.c  test_voxelize.c  v2r2.c  v2r2.h  v2r_ndsphere.c  v2r_ndsphere.cpp  v2r_spheroid.c  v2r_spheroid.cpp  v2r_spheroid.h  v2r_test_ndsphere.c  v2r_test_spheroid.c  v2r_test_utils.c  v2r_test_utils.h  vect2rast.c  vect2rast.cpp  vect2rast.h  voxelize.c  voxelize.h
tests/: CMakeLists.txt  test_hypersphere.cpp  test_hypersphere.hpp  test_spheroid.cpp  test_spheroid.hpp  test_utils.cpp  test_utils.hpp  test_vect2rast.c  test_vect2rast.cpp  v2r_test_ndsphere.c  v2r_test_ndsphere.cpp  v2r_test_spheroid.c  v2r_test_spheroid.cpp  v2r_test_utils.c  v2r_test_utils.cpp  v2r_test_utils.h  v2r_test_utils.hpp
